--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "docker_course",
   "version": "1.0.0",
-  "description": "\"# Docker_Practiceal_Course\"",
+  "description": "\"# Docker_Practical_Course\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start" : "node index.js",
+    "start-dev" : "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
