--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,4 +5,5 @@ services:
       - ./src:/app/src:ro 
     environment:
       - NODE_ENV=development
+    command: ["npm", "run", "start-dev"]
     
