--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,11 @@
 version: "3"
 services:
   node-app:
+    build: 
+      context: .
+      dockerfile: Dockerfile
+      args:
+        - NODE_ENV=development
     volumes:
       - ./src:/app/src:ro 
     environment:
