--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,11 @@
 version: "3"
 services:
   node-app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        - NODE_ENV=production
     environment:
       - NODE_ENV=production
     command: ["npm", "start"]
