--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,8 +4,7 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
-      args:
-        - NODE_ENV=development
+      target: development
     volumes:
       - ./src:/app/src:ro 
     environment:
