--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ version: "3"
 services:
   node-app:
     container_name: express-node-app-container 
+    depends_on:
+      - mongo
+      - redis
     volumes:
       - ./src:/app/src:ro 
     ports:
@@ -11,8 +14,6 @@ services:
   mongo:
     image: mongo
     restart: always
-    depends_on:
-      - mongo
     volumes:
       - mongo-db:/data/db
     environment:
@@ -31,5 +32,16 @@ services:
       ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
   redis:
     image: redis 
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - "8080:80"
+    depends_on:
+      - node-app
+    environment:
+      - NGINX_HOST=foobar.com
+      - NGINX_PORT=80
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
 volumes:
   mongo-db: 
